<?xml version="1.0"?>
<package>
  <name>neo_auto_recover</name>
  <version>1.2.4</version>
  <description>
    Autorecover Node for Neobotix MPO_700.
  </description>
  <maintainer email="nieland@neobotix.de">Neobotix</maintainer>
  <license>BSD</license>
  <url type="website">http://www.neobotix-robots.com</url>
  <author>Jan-Niklas Nieland</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>neo_msgs</build_depend>
  <build_depend>cob_srvs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>neo_msgs</run_depend>
  <run_depend>cob_srvs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
