<package>
  <name>neo_bringup</name>
  <version>1.2.4</version>
  <description>
    Base for MP400
  </description>
  <maintainer email="test@test.com">Neobotix GmbH</maintainer>
  <license>BSD</license>

  <url>http://</url>
  <author>Jan-Niklas Nieland</author>

  <buildtool_depend>catkin</buildtool_depend>

  

</package>
